30-sg-rules/main.tf
##### MONGOBD SG RULES #####

# MONGODB accepting traffic from Bastion

resource "aws_security_group_rule" "mongodb_bastion" {

   type = "ingress"
   security_group_id = local.mongodb_sg_id 
   source_security_group_id = local.bastion_sg_id
   from_port         = 22
   protocol       = "tcp"
   to_port           = 22
}

# MONGODB accepting traffic from CATALOGUE

resource "aws_security_group_rule" "mongodb_catalogue" {

   type = "ingress"
   security_group_id = local.mongodb_sg_id 
   source_security_group_id = local.catalogue_sg_id
   from_port         = 27017
   protocol       = "tcp"
   to_port           = 27017
}

# MONGODB accepting traffic from USER

resource "aws_security_group_rule" "mongodb_user" {

   type = "ingress"
   security_group_id = local.mongodb_sg_id 
   source_security_group_id = local.user_sg_id
   from_port         = 27017
   protocol       = "tcp"
   to_port           = 27017
}


##### REDIS SG RULES #####

# REDIS accepting traffic from Bastion

resource "aws_security_group_rule" "redis_bastion" {

   type = "ingress"
   security_group_id = local.redis_sg_id 
   source_security_group_id = local.bastion_sg_id
   from_port         = 22
   protocol       = "tcp"
   to_port           = 22
}

# REDIS accepting traffic from USER

resource "aws_security_group_rule" "redis_user" {

   type = "ingress"
   security_group_id = local.redis_sg_id 
   source_security_group_id = local.user_sg_id
   from_port         = 6379
   protocol       = "tcp"
   to_port           = 6379
}

# REDIS accepting traffic from CART

resource "aws_security_group_rule" "redis_cart" {

   type = "ingress"
   security_group_id = local.redis_sg_id 
   source_security_group_id = local.cart_sg_id
   from_port         = 6379
   protocol       = "tcp"
   to_port           = 6379
}

##### RABBITMQ SG RULES #####

# RABBITMQ accepting traffic from Bastion

resource "aws_security_group_rule" "rabbitmq_bastion" {

   type = "ingress"
   security_group_id = local.rabbitmq_sg_id 
   source_security_group_id = local.bastion_sg_id
   from_port         = 22
   protocol       = "tcp"
   to_port           = 22
}

# RABBITMQ accepting traffic from PAYMENT

resource "aws_security_group_rule" "rabbitmq_payment" {

   type = "ingress"
   security_group_id = local.rabbitmq_sg_id 
   source_security_group_id = local.payment_sg_id
   from_port         = 5672
   protocol       = "tcp"
   to_port           = 5672
}

##### MYSQL SG RULES #####

# MYSQL accepting traffic from Bastion

resource "aws_security_group_rule" "mysql_bastion" {

   type = "ingress"
   security_group_id = local.mysql_sg_id 
   source_security_group_id = local.bastion_sg_id
   from_port         = 22
   protocol       = "tcp"
   to_port           = 22
}

# MYSQL accepting traffic from SHIPPING

resource "aws_security_group_rule" "mysql_shipping" {

   type = "ingress"
   security_group_id = local.mysql_sg_id 
   source_security_group_id = local.shipping_sg_id
   from_port         = 3306
   protocol       = "tcp"
   to_port           = 3306
}


##### CATALOGUE SG RULES #####

# CATALOGUE accepting traffic from Bastion

resource "aws_security_group_rule" "catalogue_bastion" {

   type = "ingress"
   security_group_id = local.catalogue_sg_id 
   source_security_group_id = local.bastion_sg_id
   from_port         = 22
   protocol       = "tcp"
   to_port           = 22
}

# CATALOGUE accepting traffic from CART

resource "aws_security_group_rule" "catalogue_cart" {

   type = "ingress"
   security_group_id = local.catalogue_sg_id 
   source_security_group_id = local.cart_sg_id
   from_port         = 8080
   protocol       = "tcp"
   to_port           = 8080
}

# CATALOGUE accepting traffic from BACKEND_ALB

resource "aws_security_group_rule" "catalogue_backend_alb" {

   type = "ingress"
   security_group_id = local.catalogue_sg_id 
   source_security_group_id = local.backend_alb_sg_id
   from_port         = 8080
   protocol       = "tcp"
   to_port           = 8080
}

##### USER SG RULES #####

# USER accepting traffic from Bastion

resource "aws_security_group_rule" "user_bastion" {

   type = "ingress"
   security_group_id = local.user_sg_id 
   source_security_group_id = local.bastion_sg_id
   from_port         = 22
   protocol       = "tcp"
   to_port           = 22
}

# USER accepting traffic from BACKEND_ALB

resource "aws_security_group_rule" "user_backend_alb" {

   type = "ingress"
   security_group_id = local.user_sg_id 
   source_security_group_id = local.backend_alb_sg_id
   from_port         = 8080
   protocol       = "tcp"
   to_port           = 8080
}

# USER accepting traffic from PAYMENT

resource "aws_security_group_rule" "user_payment" {

   type = "ingress"
   security_group_id = local.user_sg_id 
   source_security_group_id = local.payment_sg_id
   from_port         = 8080
   protocol       = "tcp"
   to_port           = 8080
}


##### CART SG RULES #####

# CART accepting traffic from Bastion

resource "aws_security_group_rule" "cart_bastion" {

   type = "ingress"
   security_group_id = local.cart_sg_id 
   source_security_group_id = local.bastion_sg_id
   from_port         = 22
   protocol       = "tcp"
   to_port           = 22
}

# CART accepting traffic from BACKEND_ALB

resource "aws_security_group_rule" "cart_backend_alb" {

   type = "ingress"
   security_group_id = local.cart_sg_id 
   source_security_group_id = local.backend_alb_sg_id
   from_port         = 8080
   protocol       = "tcp"
   to_port           = 8080
}

# CART accepting traffic from SHIPPING

resource "aws_security_group_rule" "cart_shipping" {

   type = "ingress"
   security_group_id = local.cart_sg_id 
   source_security_group_id = local.shipping_sg_id
   from_port         = 8080
   protocol       = "tcp"
   to_port           = 8080
}

# CART accepting traffic from PAYMENT

resource "aws_security_group_rule" "cart_payment" {

   type = "ingress"
   security_group_id = local.cart_sg_id 
   source_security_group_id = local.payment_sg_id
   from_port         = 8080
   protocol       = "tcp"
   to_port           = 8080
}


##### SHIPPING SG RULES #####

# SHIPPING accepting traffic from Bastion

resource "aws_security_group_rule" "shipping_bastion" {

   type = "ingress"
   security_group_id = local.shipping_sg_id 
   source_security_group_id = local.bastion_sg_id
   from_port         = 22
   protocol       = "tcp"
   to_port           = 22
}

# SHIPPING accepting traffic from BACKEND_ALB

resource "aws_security_group_rule" "shipping_backend_alb" {

   type = "ingress"
   security_group_id = local.shipping_sg_id 
   source_security_group_id = local.backend_alb_sg_id
   from_port         = 8080
   protocol       = "tcp"
   to_port           = 8080
}

##### PAYMENT SG RULES #####

# PAYMENT accepting traffic from Bastion

resource "aws_security_group_rule" "payment_bastion" {

   type = "ingress"
   security_group_id = local.payment_sg_id 
   source_security_group_id = local.bastion_sg_id
   from_port         = 22
   protocol       = "tcp"
   to_port           = 22
}

# PAYMENT accepting traffic from BACKEND_ALB

resource "aws_security_group_rule" "payment_backend_alb" {

   type = "ingress"
   security_group_id = local.payment_sg_id 
   source_security_group_id = local.backend_alb_sg_id
   from_port         = 8080
   protocol       = "tcp"
   to_port           = 8080
}

##### BACKEND SG RULES #####

# Backend ALB accepting traffic from Bastion

resource "aws_security_group_rule" "backend_alb_bastion" {

   type = "ingress"
   security_group_id = local.backend_alb_sg_id 
   source_security_group_id = local.bastion_sg_id
   from_port         = 80
   protocol       = "tcp"
   to_port           = 80
}

# Backend ALB accepting traffic from FRONTEND

resource "aws_security_group_rule" "backend_alb_frontend" {

   type = "ingress"
   security_group_id = local.backend_alb_sg_id 
   source_security_group_id = local.frontend_sg_id
   from_port         = 80
   protocol       = "tcp"
   to_port           = 80
}

# Bastion accepting traffic from All

resource "aws_security_group_rule" "bastion_laptop" {

   type = "ingress"
   security_group_id = local.bastion_sg_id 
   cidr_blocks = ["0.0.0.0/0"]
   from_port         = 22
   protocol       = "tcp"
   to_port           = 22
}


##### Frontend ALB SG RUles #####

# FRONTEND accepting traffic from FRONTEND ALB
resource "aws_security_group_rule" "frontend_frontend_alb" {
  type              = "ingress"
  security_group_id = local.frontend_sg_id
  source_security_group_id = local.frontend_alb_sg_id
  from_port         = 80
  protocol          = "tcp"
  to_port           = 80
}

# FRONTEND ALB accepting traffic from PUBLIC
resource "aws_security_group_rule" "frontend_alb_public" {
  type              = "ingress"
  security_group_id = local.frontend_alb_sg_id
  cidr_blocks = ["0.0.0.0/0"]
  from_port         = 443
  protocol          = "tcp"
  to_port           = 443
}

# FRONTEND accepting traffic from Bastion

resource "aws_security_group_rule" "frontend_bastion" {

   type = "ingress"
   security_group_id = local.frontend_sg_id 
   source_security_group_id = local.bastion_sg_id
   from_port         = 22
   protocol       = "tcp"
   to_port           = 22
}
